<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Almost"
    android:background="@color/lightblue"
    android:padding="@dimen/dimen25">

    <TextView
        android:id="@+id/almost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almost_there"
        android:textColor="@color/background"
        android:textSize="@dimen/font42"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen175"/>

    <TextView
        android:id="@+id/thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:textColor="@color/background"
        android:layout_marginTop="@dimen/dimen8"
        android:layout_marginStart="@dimen/dimen35"
        android:layout_marginEnd="@dimen/dimen35"
        android:gravity="center"
        android:layout_below="@+id/almost"
        android:textSize="@dimen/font16"
        />

    <Button
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_putih"
        android:text="@string/verify"
        android:textSize="@dimen/font17"
        android:textColor="@color/background"
        android:layout_below="@+id/thanks"
        android:layout_marginTop="@dimen/dimen50"
        />


</RelativeLayout>